dfir_rs/tests/compile-fail-stable/surface_singleton_undefined.rs
../compile-fail/surface_singleton_undefined.rs